[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banana-task"
version = "0.1.0"
description = "A simple task management framework with decorators"
readme = "README.md"
authors = [
  { name="Davide Yi Xian Hu", email="davideyi.hu@polimi.it" },
]
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "sqlalchemy",
  "pandas",
  "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/dragonbanana/banana-task"
"Bug Tracker" = "https://github.com/dragonbanana/banana-task/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Entry point for our CLI command
[project.scripts]
banana-task = "banana_task.cli:main"